Fixed dark mode

--- a/css/dark.css
+++ b/css/dark.css
@@ -134,15 +134,15 @@ td:not(hover) {
 }
 
 .lives-container {
+    text-align: center;
     background-color: darkblue;
-    color: lightcoral;
     border: solid;
     border-radius: 20px;
     height: 60px;
     margin-bottom: 10px;
     display: flex;
     justify-content: center;
-    gap: 100px;
+    gap: 60px;
     width: 400px;
     margin-left: auto;
     margin-right: auto;
@@ -154,6 +154,10 @@ img {
 }
 
 .lives {
+    font-size: 20px;
+}
+
+.safes {
     font-size: 20px;
 }
 
