--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,6 @@ h1, h2 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-/* h2 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-} */
-
 .game {
     background-color: bisque;
     padding: 5px;
